Fix Task 1 of the Lesson 5 HW: align menu at the center of page and delete margins of the container.

--- a/GoIT/markup/home/lesson5/css/task1.css
+++ b/GoIT/markup/home/lesson5/css/task1.css
@@ -1,6 +1,10 @@
+body {
+    margin: 0;
+}
+
 .nav {
     background-color: #1aa4ff;
-    padding: 11px 0;
+    padding: 11px 25%;
     position: relative;
 }
 
